# rogerlib-vite

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  nginx.conf  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy.yml  rollback.yml
deploy/: quick-deploy.sh  setup-server.sh
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/component/: aboutComponent.tsx  changeComponent.tsx  cntctComponent.tsx  descriptionComponent.tsx  detailComponent.tsx  detailDescriptionComponent.tsx  downloadComponent.tsx  filterComponent.test.tsx  filterComponent.tsx  galleryComponent.test.tsx  galleryComponent.tsx  homeComponent.tsx  modelComponent.jsx  modelDashboardComponent.tsx  modelDescriptionComponent.tsx  modelHeaderComponent.tsx  modelViewer.tsx  modelViewerV2.jsx  quoteComponent.tsx
frontend/src/context/: galleryContext.tsx
frontend/src/hooks/: useDevice.test.tsx  useDevice.tsx
frontend/src/style/: modelDetailStyles.jsx  styles.jsx
opt/rogerlib/: docker-compose.yml  nginx.conf
rogerlib/: __init__.py  config_common.py  config_dev.py  config_prod.py
rogerlib/api/: __init__.py  roger.py
rogerlib/static/: index.html  styles.css
rogerlib/static/_json/: models.json  models_starter.json
rogerlib/static/assets/: bundle.roger.js  index-D3cDfYQ4.js  (+2 more)
rogerlib/templates/: error.html  index.html
rogerlib/views/: __init__.py  errors.py  index.py  util.py
